// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar navigation should match snapshot with active link 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-3 {
  background-color: transparent;
  color: #0A0A0A;
  margin-top: 16px;
  margin-bottom: 0;
}

.emotion-3.collapsed>p {
  margin-bottom: 24px;
}

.emotion-3.expanded>p {
  margin-bottom: 16px;
}

.emotion-3.collapsed>li {
  overflow: hidden;
  max-height: 0px;
  -webkit-transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  margin-bottom: 0;
  visibility: hidden;
}

.emotion-3.expanded>li {
  transition-timing-function: cubic-bezier(0.5, 0, 1, 0);
  transition-delay: 0s;
}

.emotion-3.expanded .selected {
  position: relative;
  overflow: visible;
}

.emotion-3.expanded .selected::before {
  content: '';
  position: absolute;
  background: #3358CC;
  height: 40px;
  width: 4px;
  border-width: 4px;
  border-radius: 0 4px 4px 0;
}

.emotion-4 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 18px;
  line-height: 20.25px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-inline: 32px;
  margin-block: 16px;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-5 {
  display: grid;
  -webkit-column-gap: 20px;
  column-gap: 20px;
  grid-template-columns: 1fr auto;
}

.emotion-6 {
  color: #0A0A0A;
  fill: #0A0A0A;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-6 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-6 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-6.emotion-6 {
  width: 24px;
  height: 24px;
  color: #0A0A0A;
  fill: #0A0A0A;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-6.emotion-6 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-6.emotion-6 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7 {
  box-sizing: border-box;
  margin-bottom: 0;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  width: 100%;
  padding: 12px 16px;
  padding-inline: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: #535353;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  cursor: pointer;
  padding-inline: 32px;
  color: #577FFB;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: transparent transparent #577FFB transparent;
  border: 4px solid transparent;
  border-left-color: #577FFB;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
  padding-inline: 28px;
  width: 100vw;
}

.emotion-8 svg {
  width: 16px;
  height: 16px;
}

.emotion-8:hover:not(:disabled) {
  color: #577FFB;
  background-color: #E0E7FF;
}

.emotion-8:active:not(:disabled) {
  color: #213A82;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-8 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-8 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-11 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 600;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-11::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-11::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-17 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.emotion-17>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-18 {
  box-sizing: border-box;
  margin-bottom: 12px;
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-19 {
  margin: 0;
  background-color: transparent;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 18px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-19::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-19::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-21 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  width: 100%;
  padding: 12px 16px;
  padding-inline: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: #535353;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  cursor: pointer;
  padding-inline: 32px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
  width: 100vw;
}

.emotion-21 svg {
  width: 16px;
  height: 16px;
}

.emotion-21:hover:not(:disabled) {
  color: #577FFB;
  background-color: #E0E7FF;
}

.emotion-21:active:not(:disabled) {
  color: #213A82;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-21 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-21 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-43 {
  width: 100vw;
  position: relative;
  left: calc(-50vw + 50%);
  margin-top: 24px;
  margin-bottom: 24px;
}

.emotion-44 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="sidebar-secondary-navigation"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      >
        <ul
          class="emotion-2"
        >
          <div
            class="expanded emotion-3"
          >
            <h5
              aria-expanded="true"
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 1
                <svg
                  aria-expanded="true"
                  aria-haspopup="true"
                  aria-hidden="true"
                  class="emotion-6"
                  fill="currentColor"
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6z"
                  />
                </svg>
              </div>
            </h5>
            <li
              class="nk-menu-item emotion-7"
            >
              <a
                aria-current="page"
                class="emotion-8"
                data-testid="buttonLink"
                href="/group1/page1"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-10"
                  >
                    <span
                      class="emotion-11"
                    >
                      Group 1 Page 1
                    </span>
                  </div>
                </div>
              </a>
            </li>
          </div>
        </ul>
        <ul
          class="emotion-2"
        >
          <div
            class="collapsed emotion-3"
          >
            <h5
              aria-expanded="false"
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 2
                <svg
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-hidden="true"
                  class="emotion-6"
                  fill="currentColor"
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 24H0V0h24v24z"
                    fill="none"
                    opacity=".87"
                  />
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"
                  />
                </svg>
              </div>
            </h5>
            <li
              class="nk-menu-group emotion-17"
            >
              <div
                class="emotion-18"
              >
                <h2
                  class="emotion-19"
                  id="mock-nk-1"
                >
                  Group 2 Page 1
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-7"
                >
                  <a
                    aria-current="false"
                    class="emotion-21"
                    data-testid="buttonLink"
                    href="/group2/page1/a"
                  >
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-10"
                      >
                        <span
                          class="emotion-11"
                        >
                          Group 2 Page 1 a
                        </span>
                      </div>
                    </div>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-7"
                >
                  <a
                    aria-current="false"
                    class="emotion-21"
                    data-testid="buttonLink"
                    href="/group2/page1/b"
                  >
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-10"
                      >
                        <span
                          class="emotion-11"
                        >
                          Group 2 Page 1 b
                        </span>
                      </div>
                    </div>
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="nk-menu-group emotion-17"
            >
              <div
                class="emotion-18"
              >
                <h2
                  class="emotion-19"
                  id="mock-nk-1"
                >
                  Group 2 Page 2
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-7"
                >
                  <a
                    aria-current="false"
                    class="emotion-21"
                    data-testid="buttonLink"
                    href="/group2/page2/a"
                  >
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-10"
                      >
                        <span
                          class="emotion-11"
                        >
                          Group 2 Page 2 a
                        </span>
                      </div>
                    </div>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-7"
                >
                  <a
                    aria-current="false"
                    class="emotion-21"
                    data-testid="buttonLink"
                    href="/group2/page2/b"
                  >
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-10"
                      >
                        <span
                          class="emotion-11"
                        >
                          Group 2 Page 2 b
                        </span>
                      </div>
                    </div>
                  </a>
                </li>
              </ul>
            </li>
          </div>
        </ul>
        <div
          class="emotion-43"
        >
          <hr
            aria-hidden="true"
            class="emotion-44"
            data-testid="divider"
          />
        </div>
      </ul>
    </nav>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="menu-sidebar"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      />
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Sidebar navigation should match snapshot with no active link 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-3 {
  background-color: transparent;
  color: #0A0A0A;
  margin-top: 16px;
  margin-bottom: 0;
}

.emotion-3.collapsed>p {
  margin-bottom: 24px;
}

.emotion-3.expanded>p {
  margin-bottom: 16px;
}

.emotion-3.collapsed>li {
  overflow: hidden;
  max-height: 0px;
  -webkit-transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  margin-bottom: 0;
  visibility: hidden;
}

.emotion-3.expanded>li {
  transition-timing-function: cubic-bezier(0.5, 0, 1, 0);
  transition-delay: 0s;
}

.emotion-3.expanded .selected {
  position: relative;
  overflow: visible;
}

.emotion-3.expanded .selected::before {
  content: '';
  position: absolute;
  background: #3358CC;
  height: 40px;
  width: 4px;
  border-width: 4px;
  border-radius: 0 4px 4px 0;
}

.emotion-4 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 18px;
  line-height: 20.25px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-inline: 32px;
  margin-block: 16px;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-5 {
  display: grid;
  -webkit-column-gap: 20px;
  column-gap: 20px;
  grid-template-columns: 1fr auto;
}

.emotion-6 {
  color: #0A0A0A;
  fill: #0A0A0A;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-6 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-6 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-6.emotion-6 {
  width: 24px;
  height: 24px;
  color: #0A0A0A;
  fill: #0A0A0A;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-6.emotion-6 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-6.emotion-6 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7 {
  box-sizing: border-box;
  margin-bottom: 0;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  width: 100%;
  padding: 12px 16px;
  padding-inline: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: #535353;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  cursor: pointer;
  padding-inline: 32px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
  width: 100vw;
}

.emotion-8 svg {
  width: 16px;
  height: 16px;
}

.emotion-8:hover:not(:disabled) {
  color: #577FFB;
  background-color: #E0E7FF;
}

.emotion-8:active:not(:disabled) {
  color: #213A82;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-8 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-8 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-11 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 600;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-11::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-11::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-17 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.emotion-17>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-18 {
  box-sizing: border-box;
  margin-bottom: 12px;
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-19 {
  margin: 0;
  background-color: transparent;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 18px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-19::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-19::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-43 {
  width: 100vw;
  position: relative;
  left: calc(-50vw + 50%);
  margin-top: 24px;
  margin-bottom: 24px;
}

.emotion-44 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="sidebar-secondary-navigation"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      >
        <ul
          class="emotion-2"
        >
          <div
            class="collapsed emotion-3"
          >
            <h5
              aria-expanded="false"
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 1
                <svg
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-hidden="true"
                  class="emotion-6"
                  fill="currentColor"
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 24H0V0h24v24z"
                    fill="none"
                    opacity=".87"
                  />
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"
                  />
                </svg>
              </div>
            </h5>
            <li
              class="nk-menu-item emotion-7"
            >
              <a
                aria-current="false"
                class="emotion-8"
                data-testid="buttonLink"
                href="/group1/page1"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-10"
                  >
                    <span
                      class="emotion-11"
                    >
                      Group 1 Page 1
                    </span>
                  </div>
                </div>
              </a>
            </li>
          </div>
        </ul>
        <ul
          class="emotion-2"
        >
          <div
            class="collapsed emotion-3"
          >
            <h5
              aria-expanded="false"
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 2
                <svg
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-hidden="true"
                  class="emotion-6"
                  fill="currentColor"
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 24H0V0h24v24z"
                    fill="none"
                    opacity=".87"
                  />
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"
                  />
                </svg>
              </div>
            </h5>
            <li
              class="nk-menu-group emotion-17"
            >
              <div
                class="emotion-18"
              >
                <h2
                  class="emotion-19"
                  id="mock-nk-1"
                >
                  Group 2 Page 1
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-7"
                >
                  <a
                    aria-current="false"
                    class="emotion-8"
                    data-testid="buttonLink"
                    href="/group2/page1/a"
                  >
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-10"
                      >
                        <span
                          class="emotion-11"
                        >
                          Group 2 Page 1 a
                        </span>
                      </div>
                    </div>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-7"
                >
                  <a
                    aria-current="false"
                    class="emotion-8"
                    data-testid="buttonLink"
                    href="/group2/page1/b"
                  >
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-10"
                      >
                        <span
                          class="emotion-11"
                        >
                          Group 2 Page 1 b
                        </span>
                      </div>
                    </div>
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="nk-menu-group emotion-17"
            >
              <div
                class="emotion-18"
              >
                <h2
                  class="emotion-19"
                  id="mock-nk-1"
                >
                  Group 2 Page 2
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-7"
                >
                  <a
                    aria-current="false"
                    class="emotion-8"
                    data-testid="buttonLink"
                    href="/group2/page2/a"
                  >
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-10"
                      >
                        <span
                          class="emotion-11"
                        >
                          Group 2 Page 2 a
                        </span>
                      </div>
                    </div>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-7"
                >
                  <a
                    aria-current="false"
                    class="emotion-8"
                    data-testid="buttonLink"
                    href="/group2/page2/b"
                  >
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-10"
                      >
                        <span
                          class="emotion-11"
                        >
                          Group 2 Page 2 b
                        </span>
                      </div>
                    </div>
                  </a>
                </li>
              </ul>
            </li>
          </div>
        </ul>
        <div
          class="emotion-43"
        >
          <hr
            aria-hidden="true"
            class="emotion-44"
            data-testid="divider"
          />
        </div>
      </ul>
    </nav>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="menu-sidebar"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      />
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Sidebar navigation should render only routes under current section 1`] = `
<DocumentFragment>
  @media screen {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-3 {
  background-color: transparent;
  color: #0A0A0A;
  margin-top: 16px;
  margin-bottom: 0;
}

.emotion-3.collapsed>p {
  margin-bottom: 24px;
}

.emotion-3.expanded>p {
  margin-bottom: 16px;
}

.emotion-3.collapsed>li {
  overflow: hidden;
  max-height: 0px;
  -webkit-transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  transition: max-height 0.8s cubic-bezier(0, 1, 0, 1) -0.1s;
  margin-bottom: 0;
  visibility: hidden;
}

.emotion-3.expanded>li {
  transition-timing-function: cubic-bezier(0.5, 0, 1, 0);
  transition-delay: 0s;
}

.emotion-3.expanded .selected {
  position: relative;
  overflow: visible;
}

.emotion-3.expanded .selected::before {
  content: '';
  position: absolute;
  background: #3358CC;
  height: 40px;
  width: 4px;
  border-width: 4px;
  border-radius: 0 4px 4px 0;
}

.emotion-4 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 18px;
  line-height: 20.25px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
  margin-inline: 32px;
  margin-block: 16px;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-5 {
  display: grid;
  -webkit-column-gap: 20px;
  column-gap: 20px;
  grid-template-columns: 1fr auto;
}

.emotion-6 {
  color: #0A0A0A;
  fill: #0A0A0A;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-6 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-6 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-6.emotion-6 {
  width: 24px;
  height: 24px;
  color: #0A0A0A;
  fill: #0A0A0A;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-6.emotion-6 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-6.emotion-6 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-7 {
  box-sizing: border-box;
  margin-bottom: 0;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  width: 100%;
  padding: 12px 16px;
  padding-inline: 32px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: #535353;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  cursor: pointer;
  padding-inline: 32px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
  width: 100vw;
}

.emotion-8 svg {
  width: 16px;
  height: 16px;
}

.emotion-8:hover:not(:disabled) {
  color: #577FFB;
  background-color: #E0E7FF;
}

.emotion-8:active:not(:disabled) {
  color: #213A82;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-8 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-8 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-11 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 600;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-11::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-11::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-17 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.emotion-17>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.emotion-18 {
  box-sizing: border-box;
  margin-bottom: 12px;
  padding-left: 32px;
  padding-right: 32px;
}

.emotion-19 {
  margin: 0;
  background-color: transparent;
  color: #0A0A0A;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 18px;
  font-weight: 700;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-19::before {
  content: '';
  margin-bottom: -0.2155em;
  display: block;
}

.emotion-19::after {
  content: '';
  margin-top: -0.2125em;
  display: block;
}

.emotion-43 {
  width: 100vw;
  position: relative;
  left: calc(-50vw + 50%);
  margin-top: 24px;
  margin-bottom: 24px;
}

.emotion-44 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="sidebar-secondary-navigation"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      >
        <ul
          class="emotion-2"
        >
          <div
            class="expanded emotion-3"
          >
            <h5
              aria-expanded="true"
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 1
                <svg
                  aria-expanded="true"
                  aria-haspopup="true"
                  aria-hidden="true"
                  class="emotion-6"
                  fill="currentColor"
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14l-6-6z"
                  />
                </svg>
              </div>
            </h5>
            <li
              class="nk-menu-item emotion-7"
            >
              <a
                aria-current="false"
                class="emotion-8"
                data-testid="buttonLink"
                href="/group1/page1"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-10"
                  >
                    <span
                      class="emotion-11"
                    >
                      Group 1 Page 1
                    </span>
                  </div>
                </div>
              </a>
            </li>
          </div>
        </ul>
        <ul
          class="emotion-2"
        >
          <div
            class="collapsed emotion-3"
          >
            <h5
              aria-expanded="false"
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                Group 2
                <svg
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-hidden="true"
                  class="emotion-6"
                  fill="currentColor"
                  height="24px"
                  viewBox="0 0 24 24"
                  width="24px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 24H0V0h24v24z"
                    fill="none"
                    opacity=".87"
                  />
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"
                  />
                </svg>
              </div>
            </h5>
            <li
              class="nk-menu-group emotion-17"
            >
              <div
                class="emotion-18"
              >
                <h2
                  class="emotion-19"
                  id="mock-nk-1"
                >
                  Group 2 Page 1
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-7"
                >
                  <a
                    aria-current="false"
                    class="emotion-8"
                    data-testid="buttonLink"
                    href="/group2/page1/a"
                  >
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-10"
                      >
                        <span
                          class="emotion-11"
                        >
                          Group 2 Page 1 a
                        </span>
                      </div>
                    </div>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-7"
                >
                  <a
                    aria-current="false"
                    class="emotion-8"
                    data-testid="buttonLink"
                    href="/group2/page1/b"
                  >
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-10"
                      >
                        <span
                          class="emotion-11"
                        >
                          Group 2 Page 1 b
                        </span>
                      </div>
                    </div>
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="nk-menu-group emotion-17"
            >
              <div
                class="emotion-18"
              >
                <h2
                  class="emotion-19"
                  id="mock-nk-1"
                >
                  Group 2 Page 2
                </h2>
              </div>
              <ul
                aria-labelledby="mock-nk-1"
              >
                <li
                  class="nk-menu-item emotion-7"
                >
                  <a
                    aria-current="false"
                    class="emotion-8"
                    data-testid="buttonLink"
                    href="/group2/page2/a"
                  >
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-10"
                      >
                        <span
                          class="emotion-11"
                        >
                          Group 2 Page 2 a
                        </span>
                      </div>
                    </div>
                  </a>
                </li>
                <li
                  class="nk-menu-item emotion-7"
                >
                  <a
                    aria-current="false"
                    class="emotion-8"
                    data-testid="buttonLink"
                    href="/group2/page2/b"
                  >
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-10"
                      >
                        <span
                          class="emotion-11"
                        >
                          Group 2 Page 2 b
                        </span>
                      </div>
                    </div>
                  </a>
                </li>
              </ul>
            </li>
          </div>
        </ul>
        <div
          class="emotion-43"
        >
          <hr
            aria-hidden="true"
            class="emotion-44"
            data-testid="divider"
          />
        </div>
      </ul>
    </nav>
  </div>
  @media screen {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    display: block;
  }
}

.emotion-1 {
  box-sizing: border-box;
  height: 100%;
}

.emotion-1>ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 li:last-of-type {
  margin-bottom: 0;
}

<div
    class="emotion-0"
  >
    <nav
      aria-label="menu-sidebar"
      class="emotion-1"
      data-testid="menu-container"
      role="navigation"
    >
      <ul
        role="list"
      />
    </nav>
  </div>
</DocumentFragment>
`;
